# SkyMediaPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/skystack/skymediaplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  config.h.in  native-lib.cpp
app/src/main/cpp/includes/ffmpeg/libavutil/: ffversion.h
app/src/main/cpp/includes/utils/: AndroidLog.h  BufferQueue.h  PlayerFormats.h
app/src/main/cpp/src/: MediaPLayerObserver.h  MessageQueue.cpp  MessageQueue.h  SkyFrameQueue.cpp  SkyFrameQueue.h  SkyMediaPlayer.cpp  SkyMediaPlayer.h
app/src/main/cpp/src/Decoder/: AudioDecoderObserver.h  DecoderBase.h  DemuxThread.cpp  DemuxThread.h  FFDecoder.cpp  FFDecoder.h  FFMediaDecoder.cpp  FFMediaDecoder.h  MediaCodecDecoder.cpp  MediaCodecDecoder.h  MediaDecoderFactory.cpp  MediaDecoderFactory.h  SkyDecoder.h  SkyPacketQueue.cpp  SkyPacketQueue.h  VideoDecoder.cpp  VideoDecoder.h  VideoDecoderObserver.h
app/src/main/cpp/src/DemuxingDecoder/: DemuxingDecoderBase.h  FFDemuxingDecoder.cpp  FFDemuxingDecoder.h
app/src/main/cpp/src/Render/Audio/: AudioPlayer.h  OpenslPLayer.cpp  OpenslPLayer.h
app/src/main/cpp/src/Render/Video/: GLRender.cpp  GLRender.h  GLUtils.cpp  GLUtils.h  NativeRender.cpp  NativeRender.h  RenderBase.h
app/src/main/cpp/src/Renderer/: AudioPlayer.cpp  AudioPlayer.h  GLUtils.cpp  GLUtils.h  RenderThread.cpp  RenderThread.h  SkyClock.cpp  SkyClock.h  VideoRenderer.cpp  VideoRenderer.h
app/src/main/cpp/src/jni/: MediaPlayerProxy.cpp  MediaPlayerProxy.h  NativeObserver.cpp  NativeObserver.h  global_java_class.h  jni_onload.cc  jvm.cc  jvm.h  native-lib.cpp  native-lib.h  native_method.h  native_test.cpp
app/src/main/java/com/skystack/skymediaplayer/: FFmepgNativeRtmpActivity.java  FFmpegNativeActivity.java  FFmpegOpenGLActivity.java  MainActivity.java  MediaPlayer.java  MediaPlayerObserver.java  SurfaceRenderView.java  Utils.java  VideoActivity.java
app/src/main/java/com/skystack/skymediaplayer/Activities/: MainActivity.java  VideoActivity.java
app/src/main/java/com/skystack/skymediaplayer/MediaPlayer/: AbstractMediaPlayer.java  FFMediaPlayer.java  IMediaPlayer.java  MediaPlayerObserver.java  SkyMediaPlayer.java  VideoDecoderObserver.java
app/src/main/java/com/skystack/skymediaplayer/View/: IRenderView.java  MeasureHelper.java  SkyVideoView.java  SurfaceRenderView.java
app/src/main/java/com/skystack/skymediaplayer/util/: CommonUtils.java  MyGLSurfaceView.java  MySurfaceView.java
app/src/main/res/layout/: activity_f_fmepg_native_rtmp.xml  activity_f_fmpeg_native.xml  activity_f_fmpeg_open_g_l.xml  activity_main.xml  activity_video.xml  toolbar.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/skystack/skymediaplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
